created start game and start timer functions. Start game button doesn't trigger any events or functions. Terminal says that the fontAwesome svg's are not recognizeable.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess</title>
-  <link rel="stylesheet" href="./app.js" defer>
-  <link rel="stylesheet" href="./pieces.js" defer>
   <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
   <button id="startBtn">Start Game</button>
   <div id="chessboard"></div>
+  <h1 id="pClock"></h1>
+  <div class="piece" id="pawn"></div>
+  <div class="piece" id="rook"></div>
+  <div class="piece" id="knight"></div>
+  <div class="piece" id="king"></div>
+  <div class="piece" id="queen"></div>
+  <div class="piece" id="bishop"></div>
+  <i class="fa-solid fa-chess"></i>
+
+  <script src="pieces.js"></script>
+  <script src="app.js"></script>
+  <script src="https://kit.fontawesome.com/6fadd4d29e.js" crossorigin="anonymous"></script>
 </body>
 </html>
