--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="#">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess</title>
   <link rel="stylesheet" href="./style.css">
@@ -9,15 +10,9 @@
 </head>
 <body>
   <button id="startBtn">Start Game</button>
+  <button id="endBtn">Stop Time</button>
   <div id="chessboard"></div>
   <h1 id="pClock"></h1>
-  <div class="piece" id="pawn"></div>
-  <div class="piece" id="rook"></div>
-  <div class="piece" id="knight"></div>
-  <div class="piece" id="king"></div>
-  <div class="piece" id="queen"></div>
-  <div class="piece" id="bishop"></div>
-  <i class="fa-solid fa-chess"></i>
 
   <script src="pieces.js"></script>
   <script src="app.js"></script>
