--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 
 </head>
 <body>
-  <button id="startBtn">Start Game</button>
-  <button id="endBtn">Stop Time</button>
-  <div id="chessboard"></div>
-  <h1 id="pClock"></h1>
+  <button class="btn" id="startBtn">Start Game</button>
+  <button class="btn" id="endBtn">Stop Time</button>
+  <div class="container">
+    <h1 class="clock" id="p1Clock"></h1>
+    <div id="chessboard"></div>
+    <h1 class="clock" id="p2Clock"></h1>
+  </div>
+  
 
   <script src="pieces.js"></script>
   <script src="app.js"></script>
